feat: implement country code dropdown component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.14.1",
+    "country-flag-icons": "^1.5.19",
+    "libphonenumber-js": "^1.12.9",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
