--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.1",
     "country-flag-icons": "^1.5.19",
+    "flag-icons": "^7.5.0",
     "libphonenumber-js": "^1.12.9",
     "next": "15.3.5",
     "react": "^19.0.0",
